Fixed minor bugs while dispaying on mobile and edited footer

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -120,6 +120,11 @@ a:visited { color: #205caa; }
   height: 25px;
 }
 
+.footer-text {
+  text-align: center;
+  margin: 5px 0px 20px 0px;
+}
+
 .footer-col-1 {
   float: left;
   width: 270px; /*fallback*/
@@ -231,7 +236,7 @@ a:visited { color: #205caa; }
 .post-content {
   margin: 0 0 30px;
   font-family: 'AvenirNext-Regular', Helvetica, sans-serif;
-  font-size: 1.3em;
+  font-size: 1.25em;
 }
 
 .post-content > * { margin: 20px 0; }
@@ -277,6 +282,7 @@ a:visited { color: #205caa; }
 
 .post-content img {
   text-align: center;
+  width: 100%;
 }
 
 pre,
